fix font-align

--- a/app/assets/stylesheets/logo.css.scss
+++ b/app/assets/stylesheets/logo.css.scss
@@ -52,6 +52,7 @@ input[type="submit"]{
 .mutualfriends-name{
   font-size: 11px;
   font-weight: bold;
+  text-align: center;
 }
 .user-name{
   font-size: 13px;
